2016-01-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	Revert changes causing old Emacsen not to work

	* mml-sec.el (mml1991-signers, mml2015-signers)
	(mml-smime-signers, mml1991-encrypt-to-self, mml2015-encrypt-to-self)
	(mml-smime-encrypt-to-self, mml2015-sign-with-sender)
	(mml-smime-sign-with-sender, mml2015-always-trust)
	(mml-secure-fail-when-key-problem, mml-secure-key-preferences):
	* nntp.el (nntp-request-newgroups): Revert.

2016-01-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnir.el (nnir-request-update-mark): Default to the original mark.
	cf. <http://thread.gmane.org/gmane.emacs.gnus.general/86583>
	and <http://thread.gmane.org/gmane.emacs.gnus.general/86640>

2016-01-15  Eric Abrahamsen  <eric@ericabrahamsen.net>

	Honor docstring of gnus-group-get-new-news

	* gnus-start.el (gnus-get-unread-articles): If the prefix arg is t,
	but non-numeric, unconditionally consider all groups to need updating.

2016-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-request-newgroups): Simplify.

2016-01-13  Paul Eggert  <eggert@cs.ucla.edu>

	Fix NNTP NEWGROUPS off-by-a-few-hours bug.

	* nntp.el (nntp-request-newgroups): Format string in Universal Time,
	since we’re telling the server “GMT”.

2016-01-13  Glenn Morris  <rgm@gnu.org>

	* gnus-fun.el (gnus-x-face-omit-files, gnus-face-omit-files):
	* gnus.el (gnus-valid-select-methods): Fix custom types.

	* mml-sec.el (mml1991-signers, mml2015-signers)
	(mml-smime-signers, mml1991-encrypt-to-self, mml2015-encrypt-to-self)
	(mml-smime-encrypt-to-self, mml2015-sign-with-sender)
	(mml-smime-sign-with-sender, mml2015-always-trust)
	(mml-secure-fail-when-key-problem, mml-secure-key-preferences):
	Add missing version tags.

	* mml-smime.el (epg-key-sub-key-list, epg-sub-key-capability)
	(epg-sub-key-validity): Fix declarations.

2016-01-04  Jens Lechtenboerger  <jens.lechtenboerger@fsfe.org>

	* message.el (message-send): Do secure signed Bcc handling (bug#18718).

2015-12-28  Katsumi Yamaoka  <yamaoka@jpl.org>
